--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header6 cid-rTasxu4r3t mbr-fullscreen" id="header6-9">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header6 cid-rTasxu4r3t mbr-fullscreen" id="header6-9">
 
     
 
@@ -106,7 +106,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vGYO2PlRoWbxNsK/JmLsDLgYs50i49kgl2zN91zyNU6jrnlRKgBYGPRhVWjUkNlmdiL/CWA0jhCUj0oHe4DaCE7jKPGqO55V8dwYJRdJ9fYk42he090cNmiZro1mM2MC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fRc0nHdydIw6Mijpb/llit8iQbj+di/75zaMLjJaS9fRlhRIJY2SEYfxpH2zLrliIoK7DvkACVrgvdWMxbP6x/Zta4dpPbrSJSdA66KGya11draEBn+05IVqNmPtsCeQ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -215,34 +215,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Menu</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTblzeUPSE">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbnNrCty3">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTblzeVONR">
+                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTbnNrChsW">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTblzeVONR">
+                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTbnNrChsW">
                 </div>
             </div><div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTblzeVONR">
+                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTbnNrChsW">
                 </div>
             </div>
             
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTblzeVONR">
+                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTbnNrChsW">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTblzeUPSE">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbnNrCty3">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTblzeVONR">
+                        <div class="carousel slide" data-ride="carousel" id="rTbnNrChsW">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314110238-500x323.png" alt="">
@@ -258,18 +258,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTblzeVONR"></li>
-                                <li data-slide-to="1" data-target="#rTblzeVONR"></li>
-                                <li data-slide-to="2" data-target="#rTblzeVONR"></li>
-                                <li data-slide-to="3" data-target="#rTblzeVONR"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTbnNrChsW"></li>
+                                <li data-slide-to="1" data-target="#rTbnNrChsW"></li>
+                                <li data-slide-to="2" data-target="#rTbnNrChsW"></li>
+                                <li data-slide-to="3" data-target="#rTbnNrChsW"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTblzeVONR">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbnNrChsW">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTblzeVONR">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbnNrChsW">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -291,34 +291,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Deruvative</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTblzeVyJW">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbnNrDERX">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTblzeVXIL">
+                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTbnNrDBF8">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTblzeVXIL">
+                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTbnNrDBF8">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTblzeVXIL">
+                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTbnNrDBF8">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTblzeVXIL">
+                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTbnNrDBF8">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTblzeVyJW">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbnNrDERX">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTblzeVXIL">
+                        <div class="carousel slide" data-ride="carousel" id="rTbnNrDBF8">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314103330-510x383.png" alt="">
@@ -334,18 +334,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTblzeVXIL"></li>
-                                <li data-slide-to="1" data-target="#rTblzeVXIL"></li>
-                                <li data-slide-to="2" data-target="#rTblzeVXIL"></li>
-                                <li data-slide-to="3" data-target="#rTblzeVXIL"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTbnNrDBF8"></li>
+                                <li data-slide-to="1" data-target="#rTbnNrDBF8"></li>
+                                <li data-slide-to="2" data-target="#rTbnNrDBF8"></li>
+                                <li data-slide-to="3" data-target="#rTbnNrDBF8"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTblzeVXIL">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbnNrDBF8">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTblzeVXIL">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbnNrDBF8">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -388,7 +388,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.co/">
-                        <img src="assets/images/logo2.png" alt="Mobirise">
+                        <img src="assets/images/-20200314125631-256x192.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
