--- a/page7.html
+++ b/page7.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header1 cid-rTb1mQVZaC" id="header16-2l">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header1 cid-rTb1mQVZaC" id="header16-2l">
 
     
 
@@ -91,34 +91,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Deruvative</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbnOQis9R">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTboAHSF0Q">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTbnOQi8Ce">
+                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTboAHS5LH">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTbnOQi8Ce">
+                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTboAHS5LH">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTbnOQi8Ce">
+                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTboAHS5LH">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTbnOQi8Ce">
+                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTboAHS5LH">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbnOQis9R">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTboAHSF0Q">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTbnOQi8Ce">
+                        <div class="carousel slide" data-ride="carousel" id="rTboAHS5LH">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314103330-510x383.png" alt="">
@@ -134,18 +134,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTbnOQi8Ce"></li>
-                                <li data-slide-to="1" data-target="#rTbnOQi8Ce"></li>
-                                <li data-slide-to="2" data-target="#rTbnOQi8Ce"></li>
-                                <li data-slide-to="3" data-target="#rTbnOQi8Ce"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTboAHS5LH"></li>
+                                <li data-slide-to="1" data-target="#rTboAHS5LH"></li>
+                                <li data-slide-to="2" data-target="#rTboAHS5LH"></li>
+                                <li data-slide-to="3" data-target="#rTboAHS5LH"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbnOQi8Ce">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTboAHS5LH">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbnOQi8Ce">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTboAHS5LH">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
